5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1885_1602.log
== TEST (2019-07-09 10:08:30) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:08:38) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:08:56) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:10:52) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))

for i in t:
	x[i] = x[i] + min(t)
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:11:44) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
x = 0
for i in t:
	x[i] = x[i] + min(t)
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:12:00) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
x = 0
for i in t:
	x[i] = x[i] + min(t)
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:33) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
for i in range(t):
	[i]=min(t)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:51) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros = (n,dtype=int)
for i in range(t):
	[i]=min(t)
	print(i)
-- ERROR:
File "XXXX", line 4
    zeros = (n,dtype=int)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:56) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros = (n,dtype=int)
for i in range(t):
	[i]=min(t)
	print(i)
-- ERROR:
File "XXXX", line 4
    zeros = (n,dtype=int)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:06) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros(n,dtype=int)
for i in range(t):
	[i]=min(t)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:34) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros(t,dtype=int)
for i in range(t):
	[i]=min(t)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:30) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))

for [i] in range(t):
	x = min(t)
	print(x[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:06:42) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros(n,dtype=5)
for [i] in range(t):
	if i[0] == min(t):
		print("0")
	elif i[1] == min(t):
		print("1")
	elif i[2] == min(t):
		print("2")	
	elif i[3] == min(t):
		print("3")
	elif i[4] == min(t):
		print("4")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:21) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))
zeros(t,dtype=5)
for [i] in range(t):
	if i[0] == min(t):
		print("0")
	elif i[1] == min(t):
		print("1")
	elif i[2] == min(t):
		print("2")	
	elif i[3] == min(t):
		print("3")
	elif i[4] == min(t):
		print("4")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:27) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))

for [i] in range(t):
	if i[0] == min(t):
		print("0")
	elif i[1] == min(t):
		print("1")
	elif i[2] == min(t):
		print("2")	
	elif i[3] == min(t):
		print("3")
	elif i[4] == min(t):
		print("4")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:11:40) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))

for [i] in range(t):
	if i[0] == min(t):
		print("0")
	elif i[1] == min(t):
		print("1")
	elif i[2] == min(t):
		print("2")	
	elif i[3] == min(t):
		print("3")
	elif i[4] == min(t):
		print("4")
	
-- EXECUTION TIME:
0.878859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1885/1602/main.py", line 5, in <module>
    for [i] in range(t):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:54:46) 
-- CODE:
from numpy import *

t = array(eval(input("tempo de chegada: ")))

for i in range(size(t):
	

	
-- EXECUTION TIME:
0.649274
-- ERROR:
  File "/home/codebench/codes/1885/1602/main.py", line 5
    for i in range(size(t):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
